new update to physics

--- a/PHY101/physicslanding.html
+++ b/PHY101/physicslanding.html
@@ -171,6 +171,37 @@
               </div>
             </a>
           </li>
+
+          <li>
+            <a
+              href="https://drive.google.com/file/d/10C11gv3Zw5WX2pCV13MlSngN4LTUTqlM/view?usp=sharing"
+              target="_blank"
+            >
+              <div class="list-item-content">
+                <h3>300 physics formulas</h3>
+                <p>
+                  A comprehensive collection of 300 essential physics formulas
+                  for quick reference.
+                </p>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a
+              href="https://drive.google.com/file/d/1b_e5bp8u2TRQbU4H6JCMZ4_2Wai5QrIn/view"
+              target="_blank"
+            >
+              <div class="list-item-content">
+                <h3>Physics remix: questions and answers</h3>
+                <p>
+                  A compilation of practice questions along with detailed
+                  answers to enhance your understanding.
+                </p>
+              </div>
+            </a>
+          </li>
+
           <li>
             <a
               href="https://drive.google.com/drive/folders/1PrekcjViXUuQZQi6al4IlzmCFwPNm9pl"
