--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
             >hassan2bit</a
           >
         </p>
+
+        <p class="creator-credit">
+          Original pdf compiledby
+          <a
+            href="https://api.whatsapp.com/send?phone=2349130699671&text=hello%20mr%20oromi%2C%20from%20%22kwasucsnotes%22%2C%20thanks%20for%20the%20compilation%2E"
+            >Oromi</a
+          >
+        </p>
       </header>
 
       <section id="course-materials">
