Add practice question resources for MTH101 and PHY101

--- a/MTH101/mathlanding.html
+++ b/MTH101/mathlanding.html
@@ -168,6 +168,22 @@
               </div>
             </a>
           </li>
+
+          <li>
+            <a
+              href="https://drive.google.com/file/d/1FoSVE8lSPzFSfpFJRT71a57bRQdWl9Da/view?usp=drive_link"
+              target="_blank"
+            >
+              <div class="list-item-content">
+                <h3>400 Mathematics: Questions and answers</h3>
+                <p>
+                  A compilation of practice questions along with answers to help
+                  prepare for exams.
+                </p>
+              </div>
+            </a>
+          </li>
+
           <li>
             <a
               href="https://drive.google.com/drive/folders/12oVwSEzRbmTRupiVeE4l_flB_vuOgy7x"
