--- a/PHY101/physicslanding.html
+++ b/PHY101/physicslanding.html
@@ -189,6 +189,20 @@
 
           <li>
             <a
+              href="https://drive.google.com/file/d/173IZDLZEjLYnHchxZdGst4QEaGqduhN4/view?usp=drive_link"
+              target="_blank"
+            >
+              <div class="list-item-content">
+                <h3>400 Physics: questions and answers</h3>
+                <p>
+                  A compilation of practice questions along with answers to help
+                  prepare for exams.
+                </p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a
               href="https://drive.google.com/file/d/1b_e5bp8u2TRQbU4H6JCMZ4_2Wai5QrIn/view"
               target="_blank"
             >
