Revise course content for COS101 and CSC101, enhancing clarity and detail in modules and table of contents.

--- a/CS101/cs101.html
+++ b/CS101/cs101.html
@@ -95,7 +95,7 @@
         border-radius: 8px;
         padding: 1.5em 2em;
         margin-bottom: 2em;
-        scroll-margin-top: 2em; /* Offset for in-page links */
+        scroll-margin-top: 2em;
       }
 
       .module h2 {
@@ -125,41 +125,62 @@
       <header>
         <h1>COS101: Introduction to Computing</h1>
         <p>
-          An outline of the fundamental concepts, components, and applications
-          of computing.
+          Fundamental concepts, hardware components, data representation, and
+          networking principles.
         </p>
       </header>
 
       <section id="table-of-contents">
         <h2>Table of Contents</h2>
         <ul class="toc-list">
-          <li><a href="#module1">Module 1: Introduction to Computing</a></li>
-          <li><a href="#module2">Module 2: Components of a Computer</a></li>
-          <li><a href="#module3">Module 3: Applications of Computers</a></li>
+          <li>
+            <a href="#module1">Module 1: Introduction & Classification</a>
+          </li>
+          <li>
+            <a href="#module2">Module 2: Computer Components & Software</a>
+          </li>
+          <li>
+            <a href="#module3">Module 3: Machine Level Data Representation</a>
+          </li>
+          <li><a href="#module4">Module 4: Networking & The Internet</a></li>
         </ul>
       </section>
 
       <main>
         <section id="module1" class="module">
-          <h2>Module 1: Introduction to Computing</h2>
+          <h2>Module 1: Introduction & Classification</h2>
           <ul>
             <li>
-              <strong>Basic Concepts:</strong> Understanding data, information,
-              and the processing cycle.
+              <strong>Core Concepts:</strong> Definitions of computer, data,
+              information, and the processing cycle (Input, Processing, Output,
+              Storage).
             </li>
             <li>
-              <strong>Brief History of Computing:</strong> From mechanical
-              calculators to modern digital computers.
+              <strong>Characteristics:</strong> Speed, Accuracy, Diligence,
+              Storage, and Versatility.
             </li>
             <li>
-              <strong>Classification of Computers:</strong>
+              <strong>History:</strong> Evolution from ABACUS and Slide Rule to
+              Babbage's engines (Difference/Analytical) and electronic computers
+              (ENIAC, EDVAC).
+            </li>
+            <li>
+              <strong>Classification:</strong>
               <ul>
-                <li>By Technology: First to Fifth Generation computers.</li>
                 <li>
-                  By Data Representation: Analog, Digital, and Hybrid computers.
+                  <strong>By Generation:</strong> 1st (Vacuum Tubes) to 5th
+                  (Artificial Intelligence).
                 </li>
                 <li>
-                  By Purpose: General-purpose vs. Special-purpose computers.
+                  <strong>By Data:</strong> Digital, Analogue, and Hybrid.
+                </li>
+                <li>
+                  <strong>By Power:</strong> Mainframe, Mini, and
+                  Microcomputers.
+                </li>
+                <li>
+                  <strong>By Purpose:</strong> General Purpose vs. Special
+                  Purpose.
                 </li>
               </ul>
             </li>
@@ -167,66 +188,79 @@
         </section>
 
         <section id="module2" class="module">
-          <h2>Module 2: Components of a Computer</h2>
+          <h2>Module 2: Computer Components & Software</h2>
           <ul>
             <li>
-              <strong>Computer Hardware:</strong>
+              <strong>Hardware:</strong> Central Processing Unit (ALU and
+              Control Unit), Primary Memory (RAM/ROM), and Secondary Storage.
+            </li>
+            <li>
+              <strong>Peripherals:</strong> Input devices (Keyboard, Scanners)
+              and Output devices (Monitors, Printers).
+            </li>
+            <li>
+              <strong>Software Systems:</strong>
               <ul>
-                <li>Central Processing Unit (CPU)</li>
-                <li>Memory (Primary and Secondary)</li>
-                <li>Input/Output Devices</li>
-              </ul>
-            </li>
-            <li>
-              <strong>Memory Types:</strong> Key differences between RAM
-              (Volatile) and ROM (Non-Volatile).
-            </li>
-            <li>
-              <strong>Peripheral Devices:</strong> Keyboards, mice, printers,
-              scanners, etc.
-            </li>
-            <li>
-              <strong>Computer Software:</strong>
-              <ul>
-                <li>System Software (e.g., Operating Systems, Utilities)</li>
                 <li>
-                  Application Software (e.g., Word Processors, Web Browsers)
+                  <strong>System Software:</strong> OS, Utility Software,
+                  Language Translators.
+                </li>
+                <li>
+                  <strong>Application Software:</strong> Word Processors,
+                  Spreadsheets, Presentation tools.
                 </li>
               </ul>
-            </li>
-            <li>
-              <strong>Operating Systems:</strong> Functions, types, and examples
-              (Windows, macOS, Linux).
             </li>
           </ul>
         </section>
 
         <section id="module3" class="module">
-          <h2>Module 3: Applications of Computers</h2>
+          <h2>Module 3: Machine Level Data Representation</h2>
           <ul>
             <li>
-              <strong>Education:</strong> E-learning, research, and
-              administrative tools.
+              <strong>Data Units:</strong> Bits, Bytes, Kilobytes, and Word
+              Length.
             </li>
             <li>
-              <strong>Business and Finance:</strong> Data processing,
-              e-commerce, banking systems.
+              <strong>Number Bases:</strong> Binary (2), Octal (8), Decimal
+              (10), and Hexadecimal (16).
             </li>
             <li>
-              <strong>Science and Engineering:</strong> Simulation, data
-              analysis, and modeling.
+              <strong>Conversions:</strong> Systematic methods for base
+              translation.
             </li>
             <li>
-              <strong>Healthcare:</strong> Medical imaging, patient records,
-              diagnostic tools.
+              <strong>Binary Arithmetic:</strong> Addition, Subtraction (1’s and
+              2’s complement), Multiplication, and Division.
             </li>
             <li>
-              <strong>Entertainment:</strong> Gaming, multimedia, and content
-              creation.
+              <strong>Non-Numeric Data:</strong> ASCII chart representation.
+            </li>
+          </ul>
+        </section>
+
+        <section id="module4" class="module">
+          <h2>Module 4: Networking & The Internet</h2>
+          <ul>
+            <li>
+              <strong>Network Fundamentals:</strong> Resource sharing and
+              communication importance.
             </li>
             <li>
-              <strong>Communication:</strong> Email, social media, and video
-              conferencing.
+              <strong>Geographic Types:</strong> LAN, CAN (Campus), MAN
+              (Metropolitan), and WAN.
+            </li>
+            <li>
+              <strong>Topologies:</strong> Physical layouts including Bus, Ring,
+              and Star.
+            </li>
+            <li>
+              <strong>OSI Model:</strong> Functional study of the 7 layers
+              (Physical to Application).
+            </li>
+            <li>
+              <strong>The Internet:</strong> Definition, history, impact, and
+              applications in Education, Business, and Healthcare.
             </li>
           </ul>
         </section>
